# OtaTester

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-build.sh  docker-compose.yml  ota_helper.hpp  vsomeip.json
cmake/: OtaTesterConfig.cmake.in  aarch64-toolchain.cmake
cmake/modules/: Build3rdparty.cmake  BuildBoost.cmake  BuildCommonAPI.cmake  BuildCommonAPIVSomeip.cmake  BuildJson.cmake  BuildVSomeip.cmake
etc/: vsomeip.json
fidl/: OtaTester.fdepl  OtaTester.fidl
include/: ota_helper.hpp  ota_helper_py.h
src/: client.cpp  client1.cpp  ota_helper.cpp  ota_helper_py.cpp
src-gen/v1/commonapi/ota/: FOTAMPUUpdate.hpp  FOTAMPUUpdateProxy.hpp  FOTAMPUUpdateProxyBase.hpp  FOTAMPUUpdateSomeIPCatalog.json  FOTAMPUUpdateSomeIPDeployment.cpp  FOTAMPUUpdateSomeIPDeployment.hpp  FOTAMPUUpdateSomeIPProxy.cpp  FOTAMPUUpdateSomeIPProxy.hpp  FOTAMPUUpdateSomeIPStubAdapter.cpp  FOTAMPUUpdateSomeIPStubAdapter.hpp  FOTAMPUUpdateStub.hpp  FOTAMPUUpdateStubDefault.hpp
